# stp

./: CMakeLists.txt
cmake/modules/: MergeStaticLibraries.cmake
lib/Parser/: smt2.lex  smt2.y
src/: CMakeLists.txt
src/STPManager/: CMakeLists.txt
src/absrefine_counterexample/: CMakeLists.txt
src/c_interface/: CMakeLists.txt
src/extlib-abc/: CMakeLists.txt
src/main/: CMakeLists.txt
src/parser/: CMakeLists.txt
src/printer/: CMakeLists.txt
src/sat/: CMakeLists.txt
src/sat/cryptominisat2/: CMakeLists.txt
src/simplifier/: CMakeLists.txt
src/to-sat/: CMakeLists.txt
